Fix astronaut size on mobile Width 100% for inputs

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -85,7 +85,6 @@
     height: 600px;
   }
   #astronaut {
-    width: 120%;
     left: -60px;
   }
   #after-hero {
