--- a/css/tally-form.css
+++ b/css/tally-form.css
@@ -49,7 +49,7 @@ body {
   border: 1px solid var(--white);
   color: var(--white);
   padding: 16px 8px;
-  width: 80%;
+  width: 100%;
 }
 
 
